create github pages

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/m">website design templates</a></section><section class="cid-qS7GgHccSP mbr-parallax-background" id="header2-f">
+<section class="engine"><a href="https://mobirise.me/e">how to make a website</a></section><section class="cid-qS7GgHccSP mbr-parallax-background" id="header2-f">
 
     
 
@@ -97,7 +97,7 @@
     </figure>
 </section>
 
-<section class="mbr-instagram-feed" data-rows="2" data-per-row-slider="" data-spacing="5" data-full-width="" data-token="7597897196.727bfe1.f736ab75a8854474a85968bf880a3b40" data-per-row-grid="3" id="instagram-feed-block-1f" data-rv-view="4" style="background-color: rgb(255, 255, 255); padding-top: 40px; padding-bottom: 40px;">
+<section class="mbr-instagram-feed" data-rows="1" data-per-row-slider="" data-spacing="5" data-full-width="" data-token="7597897196.727bfe1.f736ab75a8854474a85968bf880a3b40" data-per-row-grid="3" id="instagram-feed-block-1f" data-rv-view="4" style="background-color: rgb(255, 255, 255); padding-top: 40px; padding-bottom: 40px;">
     
     <div class="container container_toggle">
         <div class="row">
