create github pages

--- a/page1.html
+++ b/page1.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/b">create a site for free</a></section><section class="header3 cid-qUbrBacj2z" id="header3-1t">
+<section class="engine"><a href="https://mobirise.me/t">free amp template</a></section><section class="header3 cid-qUbrBacj2z" id="header3-1t">
 
     
 
