--- a/index.html
+++ b/index.html
@@ -52,17 +52,15 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
                     <a class="nav-link link text-info display-4" href="index.html#footer1-1u"></a>
-                </li><li class="nav-item"><a class="nav-link link text-info display-4" href="page1.html"><span class="mbri-file mbr-iconfont mbr-iconfont-btn"></span>Projekty EU</a></li><li class="nav-item"><a class="nav-link link text-info display-4" href="index.html#footer1-1u"><span class="mbri-pin mbr-iconfont mbr-iconfont-btn"></span>
-                        Kontakt</a></li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link link text-info display-4" href="page4.html" aria-expanded="false"><span class="mbri-users mbr-iconfont mbr-iconfont-btn"></span>O nas &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a>
-                </li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-info display-4" href="index.html#gallery2-w" aria-expanded="false" data-toggle="dropdown-submenu"><span class="mbri-extension mbr-iconfont mbr-iconfont-btn"></span>Oferta &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a><div class="dropdown-menu"><a class="dropdown-item text-info display-4" href="https://mobirise.com" aria-expanded="false">Fotele</a><a class="dropdown-item text-info display-4" href="https://mobirise.com" aria-expanded="false">Kanapy</a><a class="dropdown-item text-info display-4" href="https://mobirise.com" aria-expanded="false">Narożniki</a><a class="dropdown-item text-info display-4" href="https://mobirise.com" aria-expanded="false">Łózka</a></div></li></ul>
+                </li><li class="nav-item"><a class="nav-link link text-info display-4" href="page4.html"><span class="mbri-users mbr-iconfont mbr-iconfont-btn"></span>
+                        O nas</a></li><li class="nav-item"><a class="nav-link link text-info display-4" href="index.html#footer1-1u"><span class="mbri-pin mbr-iconfont mbr-iconfont-btn"></span>
+                        Kontakt</a></li><li class="nav-item"><a class="nav-link link text-info display-4" href="page1.html"><span class="mbri-file mbr-iconfont mbr-iconfont-btn"></span>Projekty EU</a></li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/g">how to build a site for free</a></section><section class="cid-qS7GgHccSP mbr-parallax-background" id="header2-f">
+<section class="engine"><a href="https://mobirise.me/x">free css templates</a></section><section class="cid-qS7GgHccSP mbr-parallax-background" id="header2-f">
 
     
 
@@ -129,7 +127,7 @@
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">Fabryka Mebli TOM-POL</h5>
-                <p class="mbr-text">Opatów, Szpot 1a, <br>63-645 Łęka Opatowska<br></p>
+                <p class="mbr-text">Opatów, Szpot 1a, <br>63-645 Łęka Opatowska<br>NIP: 6190020232<br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">Kontakt</h5>
